implemented more commands